[gd_scene load_steps=5 format=3 uid="uid://dy8taq07dthqn"]

[ext_resource type="Script" uid="uid://dm5cov553108r" path="res://script/npc.gd" id="1_emnu0"]
[ext_resource type="Texture2D" uid="uid://w3lvtr1quybm" path="res://assets/Default/character_squarePurple.png" id="2_7nekc"]
[ext_resource type="Texture2D" uid="uid://dd0lor4p1dt4n" path="res://assets/Default/tile_arrowDown.png" id="3_ihyvn"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nvkc6"]
size = Vector2(106, 104)

[node name="NPC" type="Area2D"]
collision_layer = 16
script = ExtResource("1_emnu0")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_7nekc")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(4, 0)
shape = SubResource("RectangleShape2D_nvkc6")

[node name="ExclamationMark" type="Sprite2D" parent="."]
visible = false
position = Vector2(1, -61)
scale = Vector2(0.625, 0.5)
texture = ExtResource("3_ihyvn")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
